# cpp-thread-safe-cache

./: .clang-format  .clang-tidy  .cspell.json  .gitignore  .iwyu  .jivahire_chat_log.json  CMakeLists.txt  CodeQL.yml  NOTES.md  README.md  SETUP.md  ado-test-selector.toml  azurepipelines-coverage.yml  cgmanifest.json  es-metadata.yml  nuget.config  owners.txt  start.ps1
src/apps/: CMakeLists.txt
src/apps/mcp/: CMakeLists.txt  README.md
src/apps/mcp_boot_loader/: CMakeLists.txt
src/apps/scp/: CMakeLists.txt  README.md
src/drivers/dma/: CMakeLists.txt  dma.c  dma_events.c  dma_interrupts.c  dma_queue_management.c  dma_silibs_interface.c  dma_timers.c
src/drivers/gpio/: CMakeLists.txt  gpio.c
src/drivers/icc_mhu_trans/: CMakeLists.txt
src/drivers/pcie/: CMakeLists.txt  pcie_async_dispatch.c  pcie_bdat.c  pcie_bdat_i.h  pcie_cli_helpers.c  pcie_cli_helpers_i.h  pcie_config.c  pcie_config_i.h  pcie_dfwk_i.h  pcie_dfwk_init.c  pcie_einj_helpers.c  pcie_einj_helpers_i.h  pcie_events.c  pcie_events.h  pcie_irq.c  pcie_link_training.c  pcie_platform_overrides.c  pcie_platform_overrides_i.h  pcie_ras.c  pcie_ras_i.h  pcie_rpss_init.c  pcie_rpss_init_i.h
src/drivers/pldm_drv/: CMakeLists.txt  pldm_drv.c  pldm_events.c
src/drivers/scmi_drv/: CMakeLists.txt
src/drivers/sensor_fifo/: CMakeLists.txt  hw_fifo.c  hw_fifo.h  scf_mhu_device.c  sensor_fifo_driver_inf.c  sensor_fifo_driver_interface_i.h
src/drivers/textio_pl011/: CMakeLists.txt  textio_pl011.c  textio_pl011_i.h
src/drivers/uart_baremetal/: CMakeLists.txt  uart.c  uart_i.h
src/drivers/vab/: CMakeLists.txt  vab_atu_mappings.c  vab_cdedss_irq.c  vab_common_setup.c  vab_events.c  vab_irq.c  vab_irq_common.c  vab_rpss_irq.c  vab_sdmss_irq.c
src/externs/1pfw_fwlibs/: CMakeLists.txt
src/externs/cmocka/: CMakeLists.txt
src/externs/cortex_m7/: CMakeLists.txt
src/externs/register_headers/: CMakeLists.txt
src/externs/silibs/: CMakeLists.txt
src/externs/threadx/: CMakeLists.txt
src/externs/zlib/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/libs/accel_intr/: CMakeLists.txt  accel_intr_data.c  accel_intr_dfwk_handlers.c  accel_intr_events.c  accel_intr_irq_init.c  accel_intr_irq_isr.c  accel_intr_virt_irq.c
src/libs/accel_mbx_icc_transport/: CMakeLists.txt
src/libs/accelerator_ip/: CMakeLists.txt  accelerator_ip.c  accelerator_ip_boot_status.c  accelerator_ip_configs.c  accelerator_ip_events.c  accelerator_ip_init.c  accelerator_ip_isolation.c  accelerator_ip_knobs.c  accelerator_ip_mcp.c  accelerator_ip_warm_reset.c
src/libs/ap_cores_init/: CMakeLists.txt  ap_cores_init.c
src/libs/arm_intrinsic/: CMakeLists.txt
src/libs/arm_utils/: CMakeLists.txt  arm_utils.c
src/libs/bandgap/: CMakeLists.txt
src/libs/boot_loader/: CMakeLists.txt  dummy_sys_calls.c  hsp_interaction_i.h  kingsgate_boot.c  unpack_image.c
src/libs/boot_status/: CMakeLists.txt  boot_status.c
src/libs/build_data/: CMakeLists.txt  build_data.c.in  build_data.h.in
src/libs/build_info_cli/: CMakeLists.txt  build_info_cli.c
src/libs/cli_power/: CMakeLists.txt  cli_power.c
src/libs/config_manager/: CMakeLists.txt
src/libs/config_manager_cli/: CMakeLists.txt
src/libs/core_info/: CMakeLists.txt  core_info.c
src/libs/corebits/: CMakeLists.txt  corebits.c
src/libs/cortex_m7/: CMakeLists.txt  cortex_m7.c
src/libs/crash_dump/: CMakeLists.txt
src/libs/css/: CMakeLists.txt  css.c
src/libs/cxl/: CMakeLists.txt  cxl.c
src/libs/d2d_cntr_sync/: CMakeLists.txt
src/libs/ddrss/: CMakeLists.txt
src/libs/debug/: CMakeLists.txt  debug.c
src/libs/error_codes/: CMakeLists.txt
src/libs/error_domain/: CMakeLists.txt
src/libs/event_trace/: CMakeLists.txt
src/libs/exception_handler/: CMakeLists.txt
src/libs/gtimer/: CMakeLists.txt  gtimer.c
src/libs/hsp_firmware_headers/: CMakeLists.txt
src/libs/hw_semaphore/: CMakeLists.txt
src/libs/i3c_controller/: CMakeLists.txt
src/libs/i3c_controller_cli/: CMakeLists.txt
src/libs/icc_cli/: CMakeLists.txt
src/libs/icc_platform_defines/: CMakeLists.txt  icc_platform_defines.h
src/libs/ift/: CMakeLists.txt
src/libs/in_band_telemetry/: CMakeLists.txt  diag_decoder.h  in_band_telemetry_ddr.h
src/libs/interrupts/: CMakeLists.txt
src/libs/ioss/: CMakeLists.txt
src/libs/mesh/: CMakeLists.txt
src/libs/mesh_cli/: CMakeLists.txt
src/libs/mhu_icc_payloads/: CMakeLists.txt  mhu_icc_payloads.h
src/libs/newlib_lock/: CMakeLists.txt  newlib_lock.c
src/libs/pex_rng/: CMakeLists.txt
src/libs/pldm_common_headers/: CMakeLists.txt
src/libs/pldm_pdr/: CMakeLists.txt  pldm_pdr_time.c.in
src/libs/power_fuse/: CMakeLists.txt
src/libs/power_telemetry_common/: CMakeLists.txt
src/libs/pwr_tlm_core_exchange/: CMakeLists.txt  pwr_tlm_core_exchange.c
src/libs/register_headers/: CMakeLists.txt
src/libs/runtime_init/: CMakeLists.txt  accel_boot_notify_init.c  accel_intr_client_init.c  accel_intr_service_init.c  accelerator_ip_init.c  accelerator_ip_mcp_init.c  accelerator_ip_scp_init.c  ap_advlog_pldm_mcp_cli_init.c  ap_advlog_pldm_mcp_init.c  ap_core_init.c  ap_cores_runtime_init.c  ap_smc_telemetry_mcp_init.c  arsm_init.c  atu_init.c  avs_scp_cli_init.c  avs_scp_init.c  bitrot_service_init.c  boot_status_init.c  build_info_cli_init.c  cfg_mgr_init.c  cli_accel_intr_init.c  cli_crash_dump_init.c  cli_ddr_init.c  cli_init.c  cli_power_init.c  cli_tlm_fuses_init.c  core_info_init.c  crash_dump_init.c  crash_dump_init_scp.c  css_init.c  d2d_cntr_sync_init.c  dcs_init.c  ddr_manager_init.c  ddrss_init.c  debug_init.c  dfwk_init.c  dma_init.c  err_domain_mcp_init.c  err_domain_scp_init.c  et_mts_clnt_init.c  (+82 more)
src/libs/scmi_cli/: CMakeLists.txt
src/libs/scp_avs/: CMakeLists.txt  scp_avs_api.c  scp_avs_driver.c  scp_avs_driver_i.h  scp_avs_events.c
src/libs/scp_avs_cli/: CMakeLists.txt  scp_avs_cli.c
src/libs/scp_interrupts/: CMakeLists.txt
src/libs/sensor_thresholds/: CMakeLists.txt
src/libs/spi/: CMakeLists.txt
src/libs/stdio_textio/: CMakeLists.txt  stdio_textio.c
src/libs/system_info/: CMakeLists.txt  system_info.c
src/services/: CMakeLists.txt
(+2151 files in other folders)
