
add_subdirectory(accelerator_ip)
add_subdirectory(boot_loader)
add_subdirectory(build_data)
add_subdirectory(cli_power)
add_subdirectory(css)
add_subdirectory(debug)
add_subdirectory(event_trace)
add_subdirectory(icc_cli)
add_subdirectory(mesh)
add_subdirectory(runtime_init)
add_subdirectory(stdio_textio)
add_subdirectory(utils)
add_subdirectory(vectors)
add_subdirectory(scp_avs)
add_subdirectory(scp_avs_cli)
add_subdirectory(register_headers)
add_subdirectory(scp_interrupts)
add_subdirectory(arm_intrinsic)
