
add_subdirectory(accelerator_ip)
add_subdirectory(arm_intrinsic)
add_subdirectory(boot_loader)
add_subdirectory(build_data)
add_subdirectory(corebits)
add_subdirectory(crash_dump)
add_subdirectory(css)
add_subdirectory(ddrss)
add_subdirectory(debug)
add_subdirectory(error_codes)
add_subdirectory(event_trace)
add_subdirectory(gtimer)
add_subdirectory(hsp_firmware_headers)
add_subdirectory(i3c_controller)
add_subdirectory(icc_cli)
add_subdirectory(icc_platform_defines)
add_subdirectory(interrupts)
add_subdirectory(ioss)
add_subdirectory(mesh)
add_subdirectory(runtime_init)
add_subdirectory(scmi_cli)
add_subdirectory(scp_avs)
add_subdirectory(scp_avs_cli)
add_subdirectory(stdio_textio)
add_subdirectory(system_info)
add_subdirectory(tower)
add_subdirectory(utils)
add_subdirectory(vectors)
add_subdirectory(warm_start)