
add_subdirectory(accelerator_ip)
add_subdirectory(accel_intr)
add_subdirectory(accel_mbx_icc_transport)
add_subdirectory(arm_intrinsic)
add_subdirectory(boot_loader)
add_subdirectory(boot_status)
add_subdirectory(build_data)
add_subdirectory(build_info_cli)
add_subdirectory(corebits)
add_subdirectory(core_info)
add_subdirectory(crash_dump)
add_subdirectory(css)
add_subdirectory(ddrss)
add_subdirectory(debug)
add_subdirectory(d2d_cntr_sync)
add_subdirectory(error_codes)
add_subdirectory(event_trace)
add_subdirectory(exception_handler)
add_subdirectory(gtimer)
add_subdirectory(hsp_firmware_headers)
add_subdirectory(hw_semaphore)
add_subdirectory(i3c_controller)
add_subdirectory(i3c_controller_cli)
add_subdirectory(icc_cli)
add_subdirectory(icc_platform_defines)
add_subdirectory(in_band_telemetry)
add_subdirectory(interrupts)
add_subdirectory(ioss)
add_subdirectory(mesh)
add_subdirectory(mesh_cli)
add_subdirectory(mhu_icc_payloads)
add_subdirectory(runtime_init)
add_subdirectory(scmi_cli)
add_subdirectory(scp_avs)
add_subdirectory(scp_avs_cli)
add_subdirectory(stdio_textio)
add_subdirectory(system_info)
add_subdirectory(tower)
add_subdirectory(utils)
add_subdirectory(variable_services)
add_subdirectory(variable_services_cli)
add_subdirectory(vectors)
add_subdirectory(warm_start)
add_subdirectory(warm_start_cli)
add_subdirectory(pex_rng)
add_subdirectory(power_fuse)
add_subdirectory(config_manager)
add_subdirectory(config_manager_cli)
add_subdirectory(cxl)
add_subdirectory(error_domain)
