
add_subdirectory(ap_core)
add_subdirectory(cli_ddr)
add_subdirectory(cli_pcie)
add_subdirectory(cli_power)
add_subdirectory(cli_sensor_fifo)
add_subdirectory(ddr_manager)
add_subdirectory(fuse)
add_subdirectory(pcie_manager)
add_subdirectory(power)
add_subdirectory(sensor_fifo)
add_subdirectory(startup_shutdown)
add_subdirectory(sds_service)
add_subdirectory(atu_service)
add_subdirectory(telemetry)
