add_subdirectory(accel_intr_client)
add_subdirectory(accel_intr_service)
add_subdirectory(ap_core)
add_subdirectory(atu_service)
add_subdirectory(cli_accel_intr)
add_subdirectory(cli_ddr)
add_subdirectory(cli_gpio)
add_subdirectory(cli_health_monitor)
add_subdirectory(cli_pcie)
add_subdirectory(cli_power)
add_subdirectory(cli_sensor_fifo)
add_subdirectory(cli_sys_info)
add_subdirectory(cli_telemetry)
add_subdirectory(event_trace)
add_subdirectory(fuse)
add_subdirectory(health_monitor)
add_subdirectory(pcie_manager)
add_subdirectory(power)
add_subdirectory(sds_service)
add_subdirectory(sensor_fifo)
add_subdirectory(startup_shutdown)
add_subdirectory(telemetry)
add_subdirectory(watchdog_service)
