add_subdirectory(accel_boot_notify)
add_subdirectory(accel_intr_client)
add_subdirectory(accel_intr_service)
add_subdirectory(ap_advlog_pldm)
add_subdirectory(ap_core)
add_subdirectory(atu_service)
add_subdirectory(bitrot_service)
add_subdirectory(cli_accel_intr)
add_subdirectory(cli_afm)
add_subdirectory(cli_ap_advlog)
add_subdirectory(cli_ddr)
add_subdirectory(cli_gpio)
add_subdirectory(cli_health_monitor)
add_subdirectory(cli_mem)
add_subdirectory(cli_pcie)
add_subdirectory(cli_power)
add_subdirectory(cli_pwr_tlm)
add_subdirectory(cli_sensor_fifo)
add_subdirectory(cli_sys_info)
add_subdirectory(cli_tlm_fuses)
add_subdirectory(event_trace)
add_subdirectory(fuse)
add_subdirectory(health_monitor)
add_subdirectory(pcie_manager)
add_subdirectory(power)
add_subdirectory(power_pldm)
add_subdirectory(power_tlm_mcp)
add_subdirectory(power_tlm_scp)
add_subdirectory(cli_rhtlm)
add_subdirectory(sds_service)
add_subdirectory(sel_manager)
add_subdirectory(sensor_fifo)
add_subdirectory(startup_shutdown)
add_subdirectory(watchdog_service)
